@@ -1,11 +1,31 @@
 import re
 from datetime import datetime as dt, timedelta
 from functools import update_wrapper, wraps
+from inspect import isclass
 
 from singledispatch import singledispatch
 
 
 def cacheable_generator(obj_type):
+    """ Caching decorator for API generator methods
+
+        If the decorated method has cached objects for that method and argument
+        combination and those objects have not expired, the cached objects are
+        yielded without calling the underlying method. If there are no objects in
+        that method's cache or the objects have expired, the underlying API method
+        is called and the resulting objects are then cached and yielded.
+
+        Cache object expiration is based on the obj_type, and defaults to
+        traw.const.DEFAULT_CACHE_TIMEOUT (300 seconds). Cache expiry timeouts can
+        be adjusted on a per-object bases from the client:
+
+        .. code-block:: python
+
+            client.change_cache_timeout(models.Run, 30)
+
+        The above will set the cache timeout of models.Run objects from 300
+        seconds to 30 seconds
+    """
     def _cacheable_generator(func):
         """ """
         cache = func.cache = {}
@@ -14,7 +34,7 @@ def cacheable_generator(obj_type):
         def cacheable_func(inst, *args, **kwargs):
             key = str(args) + str(kwargs)
             if key not in cache or cache[key]['expires'] < dt.now():
-                timeout = inst._CACHE_TIMEOUTS[inst][obj_type]  # pylint: disable=protected-access
+                timeout = inst.cache_timeouts[inst][obj_type]  # pylint: disable=protected-access
                 cache[key] = dict()
                 cache[key]['value'] = list()
                 cache[key]['expires'] = dt.now() + timedelta(seconds=timeout)
@@ -30,6 +50,25 @@ def cacheable_generator(obj_type):
 
 
 def cacheable(obj_type):
+    """ Caching decorator for API methods that return a single object
+
+        If the decorated method has a cached object for that method and argument
+        combination and that object has not expired, the cached object is
+        returned without calling the underlying method. If there is no object in
+        that method's cache or the object has expired, the underlying API method
+        is called and the resulting object is then cached and returned.
+
+        Cache object expiration is based on the obj_type, and defaults to
+        traw.const.DEFAULT_CACHE_TIMEOUT (300 seconds). Cache expiry timeouts can
+        be adjusted on a per-object bases from the client:
+
+        .. code-block:: python
+
+            client.change_cache_timeout(models.Run, 30)
+
+        The above will set the cache timeout of models.Run objects from 300
+        seconds to 30 seconds
+    """
     def cacheable_func(func):
         """ """
         cache = func.cache = {}
@@ -38,7 +77,7 @@ def cacheable(obj_type):
         def _cacheable_func(inst, *args, **kwargs):
             key = str(args) + str(kwargs)
             if key not in cache or cache[key]['expires'] < dt.now():
-                timeout = inst._CACHE_TIMEOUTS[inst][obj_type]  # pylint: disable=protected-access
+                timeout = inst.cache_timeouts[inst][obj_type]  # pylint: disable=protected-access
                 cache[key] = dict()
                 cache[key]['value'] = func(inst, *args, **kwargs)
                 cache[key]['expires'] = dt.now() + timedelta(seconds=timeout)
@@ -50,6 +89,45 @@ def cacheable(obj_type):
 
 
 def clear_cache(method):
+    """ API method decorator for API methods that POST to the TestRail API
+
+        When TRAW adds/closes/deletes/updates ojects to the TestRail API, any
+        objects of the same type that are currently cached by TRAW are
+        considered stale. To insure TRAW does not return a cached object that
+        has been modified on the TestRail side, ``clear_cache`` is used to
+        clear the cache of any API method that works with that same object
+        type.
+
+        For instance, if ``traw.api.project_by_id`` has been decorated with the
+        ``@cacheable`` decorator, then any API method that POSTs changes to the
+        TestRail API for models.Project objects should be decorated with
+        ``@clear_cache(project_by_id)``
+
+        .. code-block:: python
+
+            class API(object):
+
+                @cacheable
+                def foo_by_id(self, foo_id):
+                    # ...
+                    return foo
+
+                @cacheable_generator
+                def foos(self):
+                    # ...
+                    yield from foo_list
+
+                @clear_cache(foo_by_id)
+                @clear_cache(foos)
+                def add_foo(self, new_foo):
+                    # ...
+                    return new_foo_response
+
+        The method cache is only cleared if the reponse is successful;
+        exceptions raises from the actual call to TestRail's API will not clear
+        the cache.
+
+    """
     def target(func):
         @wraps(func)
         def _func(*args, **kwargs):
@@ -80,7 +158,8 @@ def dispatchmethod(func):
         return dispatcher.dispatch(type)
 
     def wrapper(inst, *args, **kwargs):
-        cls = args[0].__class__ if len(args) > 0 else inst.__class__
+        obj = args[0] if len(args) > 0 else inst
+        cls = obj if isclass(obj) else obj.__class__
         impl = dispatch(cls)
         return impl(inst, *args, **kwargs)
 
